--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,11 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^0.26.0",
         "bootstrap": "^5.1.3",
+        "cors": "^2.8.5",
         "joi-browser": "^13.4.0",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
         "react-art": "^17.0.2",
         "react-bootstrap": "^2.1.1",
@@ -17,6 +20,7 @@
         "react-router-dom": "^6.2.1",
         "react-router-native": "^6.2.1",
         "react-scripts": "^5.0.0",
+        "react-toastify": "^8.2.0",
         "styled-components": "^5.3.3",
         "web-vitals": "^2.1.4"
     },
