--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.26.0",
         "bootstrap": "^5.1.3",
         "cors": "^2.8.5",
+        "enzyme": "^3.11.0",
         "joi-browser": "^13.4.0",
         "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
@@ -20,6 +21,7 @@
         "react-router-dom": "^6.2.1",
         "react-router-native": "^6.2.1",
         "react-scripts": "^5.0.0",
+        "react-test-renderer": "^17.0.2",
         "react-toastify": "^8.2.0",
         "styled-components": "^5.3.3",
         "web-vitals": "^2.1.4"
@@ -50,6 +52,7 @@
     },
     "devDependencies": {
         "cypress": "^9.5.1",
+        "enzyme-to-json": "^3.6.2",
         "jest": "^27.5.1"
     }
 }
