--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
         "react": "^17.0.2",
         "react-art": "^17.0.2",
         "react-bootstrap": "^2.1.1",
+        "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
         "react-dom": "^17.0.2",
         "react-native": "^0.67.1",
         "react-native-web": "^0.17.5",
         "react-router-dom": "^6.2.1",
         "react-router-native": "^6.2.1",
         "react-scripts": "^5.0.0",
+        "react-simple-star-rating": "^4.0.5",
         "react-test-renderer": "^17.0.2",
         "react-toastify": "^8.2.0",
         "styled-components": "^5.3.3",
